kubernetes/raw/go-demo-proxy.yaml
# Kubernetes Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-demo-proxy
  labels:
    app: go-demo-proxy
spec:
    replicas: 1
    selector:
      matchLabels:
        app: go-demo-proxy
    template:
        metadata:
          labels:
            app: go-demo-proxy
          annotations:
            prometheus.io/scrape: "true"
            prometheus.io/port: "8080"
            prometheus.io/path: "/metrics"
        spec:
          containers:
            - name: go-demo-proxy
              image: harbor.services.h2o-2-13047.h2o.vmware.com/other/go-demo-proxy:0.5.0
              imagePullPolicy: Always
              ports:
                - name: http
                  containerPort: 8080
                  protocol: TCP
              livenessProbe:
                httpGet:
                  path: /
                  port: http
              readinessProbe:
                httpGet:
                  path: /
                  port: http
              resources:
                requests:
                  cpu: 100m
                  memory: 16Mi
                limits:
                  cpu: 100m
                  memory: 16Mi
---
# Service
apiVersion: v1
kind: Service
metadata:
  name: go-demo-proxy
  labels:
    app: go-demo-proxy
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: go-demo-proxy
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: go-demo-proxy-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "go-demo-proxy.tsm-2.h2o-2-13047.h2o.vmware.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: go-demo-proxy
spec:
  hosts:
    - "go-demo-proxy.tsm-2.h2o-2-13047.h2o.vmware.com"
  gateways:
    - go-demo-proxy-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            port:
              number: 80
            host: go-demo-proxy
